test/types/range/cast-assign-init/illegal-assigns.2-3.good
illegal-assigns.chpl:11: error: assigning to a range with idxType int(8) from a range with idxType uint(8) without an explicit cast
